--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "danielneis/moodle-gradeexport_newgradeexport",
-    "description": "It is a template for Moodle Grade Export plugin based on txt export from core",
+    "description": "A template for Moodle Grade Export plugin based on txt export from core",
     "license": "GPLv3",
     "authors": [
         {
